# leaderboard-audit

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
IsRankingRobust/: .gitignore  LICENSE  README.md
IsRankingRobust/bootstrap-based-ranking-experiments/: NBA.ipynb  chatbotArenaRobustnessWtd.ipynb  llmJudgeArenaWtd.ipynb  mtBenchArenaHumanWtd.ipynb  mtBenchArenaLLMWtd.ipynb  searchArenaWtd.ipynb  visionArena.ipynb  webdevArena.ipynb
IsRankingRobust/package/: setup.py
IsRankingRobust/results/: ChatbotArenaNonrobust.csv  ChatbotArenaNonrobust.pkl  LLMArenaNonrobust.csv  LLMArenaNonrobust.pkl  MTBenchHumanNonrobust.pkl  MTBenchLLMNonrobust.pkl  matchup_drop_analysis.csv
docs/: README.md  index.html
jobs/: arena55k_topk_actions_needed_batch.sh  ci_batch.sh  ci_reduction_batch.sh  ci_reduction_expected_pair_batch.sh  ci_vs_nonci_batch.sh  ci_vs_nonci_strict_all_datasets.sh  player_kendall_influence_batch.sh  test_env.sh  top1_batch.sh  topk_vs_omni_on_all_datasets_small_to_large.sh  topk_vs_rigging_all_datasets.sh  topk_vs_rigging_all_datasets_all_partition.sh  topk_vs_rigging_all_datasets_checkpointed.sh  topk_vs_rigging_all_datasets_omni_checkpointed.sh  topk_vs_rigging_tennis_only.sh
scripts/: compute_dataset_robustness_scores.py  merge_ci_reduction_influence_variant_results.py  plot_arena_ablation_actions_vs_k.py  plot_arena_influence_covariate_heatmap.py  render_feature_summary_heatmap.py  run_arena_ablation_reset.py  run_arena_influence_heatmap.py  run_arena_robustness_actions_needed.py  run_ci_reduction_batch.py  run_ci_vs_nonci_robustness_actions_needed.py  run_fair_ci_reduction_comparison.py  run_final_result_arena_ablation_all.sh  run_final_result_arena_heatmap_all.sh  run_player_kendall_influence_plots.py  run_synthetic_influence_loo.py  run_tau_ci_curve_analysis.py  run_tau_ci_curve_analysis_recompute.py  run_topk_vs_rigging_comparison.py  slurm_run_python_cleanbt.sh  submit_ci_reduction_influence_variant_jobs.sh  submit_final_result_jobs.sh
tests/: conftest.py  demo.py  test_ci_arena55k.py  test_isrankingrobust_parity.py  test_workflow.py  verify_against_baseline.py
(+431 files in other folders)
