[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-bt-rank"
version = "0.1.0"
description = "A small, clean Bradley-Terry toolkit for arena and synthetic datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
