[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-bt-rank"
version = "0.1.0"
description = "A small, clean Bradley-Terry toolkit for arena and synthetic datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hosna Oyarhoseini" }]
keywords = ["bradley-terry", "ranking", "leaderboard", "influence-functions", "robustness"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "seaborn>=0.12",
  # `datasets` pulls the Arena/MT-Bench corpora from the Hugging Face Hub.
  # datasets>=2.20 is the first release that works with huggingface_hub>=0.24,
  # which removed the private `insecure_hashlib` shim older versions imported.
  "datasets>=2.20,<5",
  "huggingface_hub>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.urls]
Homepage = "https://github.com/hosnahoseini/leaderboard-audit"
Repository = "https://github.com/hosnahoseini/leaderboard-audit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The vendored IsRankingRobust/unit_tests/ ship interactive `breakpoint()` calls
# that abort collection with bdb.BdbQuit. They are upstream's tests, not ours.
norecursedirs = ["IsRankingRobust", "tests/test", "scripts/extra", "notebooks"]
addopts = "-q"
